# docs/swagger.json
@@ -58,7 +58,7 @@
                     "200": {
                         "description": "Return event successfully",
                         "schema": {
-                            "$ref": "#/definitions/entity.Event"
+                            "$ref": "#/definitions/dto.EventDTO"
                         }
                     }
                 }
@@ -319,6 +319,41 @@
         }
     },
     "definitions": {
+        "dto.EventDTO": {
+            "type": "object",
+            "properties": {
+                "distance": {
+                    "type": "string"
+                },
+                "end": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "is_joined": {
+                    "type": "boolean"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "start": {
+                    "type": "string"
+                },
+                "ticket_url": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UserDto": {
             "type": "object",
             "properties": {
@@ -464,38 +499,6 @@
                 }
             }
         },
-        "entity.Event": {
-            "type": "object",
-            "properties": {
-                "_embedded": {
-                    "$ref": "#/definitions/entity.Embedded"
-                },
-                "dates": {
-                    "$ref": "#/definitions/entity.Dates"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "locale": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "priceRanges": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.PriceRange"
-                    }
-                },
-                "sales": {
-                    "$ref": "#/definitions/entity.Sales"
-                },
-                "type": {
-                    "type": "string"
-                }
-            }
-        },
         "entity.EventDetail": {
             "type": "object",
             "properties": {
@@ -625,20 +628,6 @@
                     "items": {
                         "$ref": "#/definitions/entity.Link"
                     }
-                }
-            }
-        },
-        "entity.PriceRange": {
-            "type": "object",
-            "properties": {
-                "currency": {
-                    "type": "string"
-                },
-                "max": {
-                    "type": "number"
-                },
-                "min": {
-                    "type": "number"
                 }
             }
         },
